--- a/views/slide.haml
+++ b/views/slide.haml
@@ -2,8 +2,18 @@
 %html
   %head
     %title= "#{presentation.title} - #{presentation.presenter}"
-    %link{:href => '/main.css', :rel => 'stylesheet', :type => 'text/css'}
+    %link{ :href => "/stylesheets/slides.css", :rel => "stylesheet", :media => "screen", :type => "text/css" }
+    %script{ :type => "text/javascript", :src => "/javascripts/jquery-1.3.2.js" }
+    %script{ :type => "text/javascript", :src => "/javascripts/slides.js" }
+
+
   %body
-    #container
-      #header
-      #content= @slide.html
+    #header
+      -if @previous_slide
+        %a{:href => "/slides/#{@previous_slide}"} Previous
+      -if @next_slide
+        %a{:href => "/slides/#{@next_slide}"} Next
+    #slides
+      #track
+        #slide-container{ :classes => @slide.classes }
+          #slide-1.content~ @slide.html
