--- a/views/slide.haml
+++ b/views/slide.haml
@@ -5,7 +5,18 @@
     %link{ :href => "/stylesheets/slides.css", :rel => "stylesheet", :media => "screen", :type => "text/css" }
     %script{ :type => "text/javascript", :src => "/javascripts/jquery-1.3.2.js" }
     %script{ :type => "text/javascript", :src => "/javascripts/slides.js" }
-
+    - if @slide.dynamic?
+      %script{ :type => "text/javascript", :src => "/javascripts/jquery.ekko.js" }
+      %script{ :type => "text/javascript", :charset => "utf-8" }
+      :javascript
+        jQuery(document).ready(function () {
+          jQuery('#slide-container').ekko({
+          url : '/slides/#{@slide.number}/update',
+          minTimeout : 500,
+          }, function (data) {
+            $('#slide-container').empty().append(data).attr('rel', 'updated');
+          });
+        });
 
   %body
     #header
@@ -16,4 +27,4 @@
     #slides
       #track
         #slide-container{ :classes => @slide.classes }
-          #slide-1.content~ @slide.html
+          %div{ :id => "slide-#{@slide.id}", :classes => 'content'}~ @slide.html
