TwitterQuiz scenario passing, yay!
* Introduced state machine to help ensure only one job is started for single slide
* Created simple JobManager to fork jobs and ensure sub-processes are killed

Using Fake[Web|Twitter] with the job manager is tricky.  You have to
ensure that the job is not started before you register the search.
Otherwise the forked job will have no way of getting the faked out
search results.

--- a/views/slide.haml
+++ b/views/slide.haml
@@ -11,7 +11,7 @@
       :javascript
         jQuery(document).ready(function () {
           jQuery('#slide-container').ekko({
-          url : '/slides/#{@slide.number}/update',
+          url : '/slides/#{@slide.id}/update',
           minTimeout : 500,
           }, function (data) {
             $('#slide-container').empty().append(data).attr('rel', 'updated');
