--- a/views/slide.haml
+++ b/views/slide.haml
@@ -5,6 +5,7 @@
     %link{ :href => "/stylesheets/slides.css", :rel => "stylesheet", :media => "screen", :type => "text/css" }
     %script{ :type => "text/javascript", :src => "/javascripts/jquery-1.3.2.js" }
     %script{ :type => "text/javascript", :src => "/javascripts/jquery.easing.js" }
+    %script{ :type => "text/javascript", :src => "/javascripts/jquery.hotkeys.js" }
     %script{ :type => "text/javascript", :src => "/javascripts/jquery.hash-changed.js" }
     %script{ :type => "text/javascript", :src => "/javascripts/slides.js" }
     - if @slide.dynamic?
